# MPL-Bot

./: .gitignore
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  sql_functions.cpp
